--- a/index9.html
+++ b/index9.html
@@ -1,16 +1,86 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style9.css">
+    <link rel="stylesheet" href="style5.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-   <div class="osn"><div class="text1"><h1>РЕМОНТ МЕБЕЛИ СПЕЦНАЗНАЧЕНИЯ</h1></div></div>
-   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-   
-   <footer><div class="ret"></div></footer>
+    <div class="osn">
+        <div class="text1">
+            <h1><span>РЕМОНТ МЕБЕЛИ СПЕЦНАЗНАЧЕНИЯ</span></h1>
+            <div class="speak">
+                <div class="box1">
+                    <h2>
+                        <li>Парикмахерские</li>
+                    </h2>
+                    <h2>
+                        <li>Салоны красоты</li>
+                    </h2>
+                    <h2>
+                        <li>Торговое оборудование</li>
+                    </h2>
+                    <h2>
+                        <li>Мед.учереждения</li>
+                    </h2>
+                </div>
+
+            </div>
+        </div>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+
+
+        <div class="text2">
+            <h2>
+                <li>Ремонт корпусной и офисной мебели</li>
+            </h2>
+            <h2>
+                <li>Ремонт двуспальных кроватей и матрасов</li>
+            </h2>
+            <h2>
+                <li>Ремонт и реставрация деревянной мебели</li>
+            </h2>
+            <h2>
+                <li>Ремонт кухонной мебели</li>
+            </h2>
+        </div>
+    </div>
+    <footer>
+        <div class="ret"></div>
+    </footer>
+    <div class="text3">
+        <h1><span>РЕМОНТ УЛИЧНОЙ МЕБЕЛИ</span></h1>
+        <div class="speak">
+            <div class="box1">
+                <h2>
+                    <li>Мебель для террас</li>
+                </h2>
+                <h2>
+                    <li>Дачная мебель</li>
+                </h2>
+                <h2>
+                    <li>Зона отдыха</li>
+                </h2>
+            </div>
+        </div>
+    </div>
+    <div class="text4">
+        <h1><span>РЕМОНТ УЛИЧНОЙ МЕБЕЛИ</span></h1>
+        <div class="speak">
+            <div class="box1">
+                <h2>
+                    <li>+38 068 604 46 26 (Валерий)</li>
+                </h2>
+                <h2>
+                    <li>+38 068 954 06 99 (Елена)</li>
+                </h2>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
