--- a/index9.html
+++ b/index9.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style33.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
@@ -15,8 +15,9 @@
             <h1><span>РЕМОНТ МЕБЕЛИ СПЕЦНАЗНАЧЕНИЯ</span></h1>
             <div class="speak">
                 <div class="box1">
-                    <h2>
-                        <li>Парикмахерские</li>
+                    <div class="css">
+                    <h2><img src="tick.png">
+                        Парикмахерские
                     </h2>
                     <h2>
                         <li>Салоны красоты</li>
@@ -28,7 +29,7 @@
                         <li>Мед.учереждения</li>
                     </h2>
                 </div>
-
+            </div>
             </div>
         </div>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -50,7 +51,7 @@
         </div>
     </div>
     <footer>
-        <div class="ret"></div>
+        <div class="ret"><div class="lil">&copy; 2020   Копирование материалов запрещено</div></div>
     </footer>
     <div class="text3">
         <h1><span>РЕМОНТ УЛИЧНОЙ МЕБЕЛИ</span></h1>
@@ -76,11 +77,18 @@
                     <li>+38 068 604 46 26 (Валерий)</li>
                 </h2>
                 <h2>
-                    <li>+38 068 954 06 99 (Елена)</li>
+                    <li>+38 068 954 06 99</li>
                 </h2>
+                <h2>
+                    <div class="vivo">(Елена)</div>
+                </h2>
+
             </div>
         </div>
     </div>
+    <h2>
+        <div class="fakt"><img src="viber (1).png"width="40px" height="40px"></div>
+    </h2>
 </body>
 
 </html>
